# cb-mpc-fork

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-wasm.yml
cmake/: compilation_flags.cmake  openssl.cmake
demos-go/cb-mpc-go/api/mpc/: access_structure.go  pve_ac_test.go  tdh2.go  tdh2_test.go
demos-go/cb-mpc-go/internal/cgobinding/: ac.cpp  ac.go  ac.h  tdh2.cpp  tdh2.go  tdh2.h
scripts/: go_with_cpp.sh
scripts/openssl/: build-static-openssl-wasm.sh
src/cbmpc/core/: CMakeLists.txt  error.cpp  precompiled.h
src/cbmpc/crypto/: base_mod.cpp  secret_sharing.cpp  secret_sharing.h
src/cbmpc/protocol/: CMakeLists.txt
wasm/: build-wasm-module.sh  loader.ts  tdh2_wasm.cpp
